2013-06-17	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.0:
		- keep in sync with stable release .82
	* Kernel 3.4:
		- keep in sync with stable release .49

2013-06-12	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.0:
		- keep in sync with stable release .81
	* Kernel 3.4:
		- keep in sync with stable release .48
	* Kernel 3.9:
		- keep in sync with stable release .5
	* Board Support Package:
		- use ptxdist-2013.06.0

2013-05-30	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.2:
		- keep in sync with stable release .46

2013-05-29	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.0:
		- keep in sync with stable release .80
	* Kernel 3.4:
		- keep in sync with stable release .47
	* Kernel 3.9:
		- keep in sync with stable release .4

2013-05-21	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.0:
		- keep in sync with stable release .79
	* Kernel 3.4:
		- keep in sync with stable release .46
	* Kernel 3.9:
		- keep in sync with stable release .3

2013-05-14	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.2:
		- keep in sync with stable release .45

2013-05-13	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.0:
		- keep in sync with stable release .78
	* Kernel 3.4:
		- keep in sync with stable release .45
	* Kernel 3.8:
		- keep in sync with stable release .13
		- end of life reached
	* Kernel 3.9:
		- keep in sync with stable release .2

2013-05-08	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.0:
		- keep in sync with stable release .77
	* Kernel 3.4:
		- keep in sync with stable release .44
	* Kernel 3.8:
		- keep in sync with stable release .12
	* Kernel 3.9:
		- keep in sync with stable release .1

2013-05-06	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.0:
		- keep in sync with stable release .76
	* Kernel 3.4:
		- keep in sync with stable release .43
	* Kernel 3.8:
		- keep in sync with stable release .11

2013-04-29	Juergen Beisert <jbe@pengutronix.de

	* Kernel 3.0:
		- keep in sync with stable release .75
	* Kernel 3.2: