@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.9.5-ptx-master Kernel Configuration
+# Linux/arm 3.9.6-ptx-master Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
