@@ -6,12 +6,12 @@ Index: linux-3.9/Makefile
 ===================================================================
 --- linux-3.9.orig/Makefile
 +++ linux-3.9/Makefile
-@@ -1,7 +1,7 @@
- VERSION = 3
+@@ -2,7 +2,7 @@ VERSION = 3
  PATCHLEVEL = 9
  SUBLEVEL = 6
--EXTRAVERSION =
-+EXTRAVERSION = -ptx-master
- NAME = Unicycling Gorilla
+ EXTRAVERSION =
+-NAME = Black Squirrel Wakeup Call
++NAME = Unicycling Gorilla
  
  # *DOCUMENTATION*
+ # To see a list of typical targets execute "make help"
