@@ -32,7 +32,7 @@ they are still available and also some of them are still maintained. Here is a
 list of currently available Linux kernel releases in the \ptxdistBSPName{}:
 
 \begin{itemize}
-	\item \curKernelRev{}, stable patch level 5 (default)
+	\item \curKernelRev{}, stable patch level 6 (default)
 	\item 3.8 *), stable patch level 13
 	\item 3.7 *), stable patch level 10
 	\item 3.6 *), stable patch level 11
