@@ -44,7 +44,7 @@ Base System
 [x] qml demo is a release
     [x] rule file uses the release
 [x] bootloader is a release
-[ ] kernel-3.9.5 is a release
+[ ] kernel-3.9.6 is a release
 [ ] kernel-3.8.13 is a release
 [ ] kernel-3.7.10 is a release
 [x] kernel-3.6.11 is a release
